# reverb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.ps1  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
client/libchat/: CMakeLists.txt  chat.cpp  chat.h
client/libreverb/: CMakeLists.txt  voice.cpp  voice.h
client/libvoice/: voice.cpp  voice.h
client/reverb/: App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  VoiceInterop.cs  reverb.csproj
libchat/: CMakeLists.txt  chat.cpp  chat.h
libvoice/: CMakeLists.txt  voice.cpp  voice.h
reverb-lib/: Cargo.toml
reverb-lib/src/: lib.rs
server/: CMakeLists.txt  main.cpp
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ChatInput.tsx  ChatList.tsx  PersonList.tsx  TopAppBar.tsx  TopAppBarButton.tsx
src/main/: main.ts
src/renderer/: App.tsx  index.ejs
src/reverb/: App.axaml  Program.cs  reverb.csproj
